Feat: Create functionlity to create a new user and his account