@@ -32,3 +32,7 @@ bootJar {
 bootRun {
     jvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
+}
